<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".MainActivity"
              android:orientation="vertical">

    <EditText
            android:hint="@string/name"
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <EditText
            android:hint="@string/weight"
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    <EditText
            android:hint="@string/height"
            android:id="@+id/heightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    <Spinner
            android:entries="@array/stomach"
            android:id="@+id/stomachStateSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Spinner
            android:hint="@string/gender"
            android:id="@+id/genderSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/gender"/>
    <Spinner
            android:text="@string/alcohol_kind"
            android:id="@+id/alcoholKindSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:hint="@string/alcohol_voltage"
            android:id="@+id/alcoholVoltageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_tag"
            android:id="@+id/writeTagButton"/>

</LinearLayout>
